# C-20_overview

./: .gitignore  README.md
1.2 hello/: 1.2 hello.cpp  1.2 hello.h  CMakeLists.txt
1.3 functions/: 1.3 functions.cpp  1.3 functions.h  CMakeLists.txt
1.4 Types/: 1.4 Types.cpp  1.4 Types.h  CMakeLists.txt
1.5 Ambito e durata/: 1.5 Ambito e durata.cpp  1.5 Ambito e durata.h  CMakeLists.txt
1.6-costanti/: 1.6-costanti.cpp  1.6-costanti.h  CMakeLists.txt
1.7-puntatori_array_e_riferimenti/: 1.7-puntatori_array_e_riferimenti.cpp  1.7-puntatori_array_e_riferimenti.h  CMakeLists.txt
1.8-test/: 1.8-test.cpp  1.8-test.h  CMakeLists.txt
2.1-tipi_definiti_dall'utente/: 2.1-tipi_definiti_dall'utente.cpp  2.1-tipi_definiti_dall'utente.h  CMakeLists.txt
2.2-classi/: 2.2-classi.cpp  2.2-classi.h  CMakeLists.txt
2.3-enumerazioni/: 2.3-enumerazioni.cpp  2.3-enumerazioni.h  CMakeLists.txt
2.4-unioni/: 2.4-unioni.cpp  2.4-unioni.h  CMakeLists.txt
3.1-compilazione_separata/: 3.1-compilazione_separata.cpp  3.1-compilazione_separata.h  CMakeLists.txt  Vector.h
3.2-moduli/: 3.2-moduli.cpp  3.2-moduli.h  CMakeLists.txt
3.3-namespaces/: 3.3-namespaces.cpp  3.3-namespaces.h  CMakeLists.txt
3.4-argomenti_di_funzioni_e_valori_restituiti/: 3.4-argomenti_di_funzioni_e_valori_restituiti.cpp  3.4-argomenti_di_funzioni_e_valori_restituiti.h  CMakeLists.txt
3.5-associazione_strutturata/: 3.5-associazione_strutturata.cpp  3.5-associazione_strutturata.h  CMakeLists.txt
4.1-eccezioni/: 4.1-eccezioni.cpp  4.1-eccezioni.h  CMakeLists.txt
4.2-asserzioni/: 4.2-asserzioni.cpp  4.2-asserzioni.h  CMakeLists.txt
projects/calculator-v2.0/: CMakeLists.txt  calculator-v2.0.cpp  calculator-v2.0.h  token_stream.cpp  token_stream.h
(+3 files in other folders)
